--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -82,12 +82,12 @@
 			<p>La casa risale al 1930, successivamente ricostruita dopo i danni subiti dai bombardamenti della seconda Guerra Mondiale che hanno colpito Milano.</p>
 	
 			<aside>
-				<a href="#" class="opengallery" data-gallery-id="26"><img src="../media/img/photos/casa_pict1.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="31"><img src="../media/img/photos/casa_pict2.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="16"><img src="../media/img/photos/casa_pict3.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="48"><img src="../media/img/photos/casa_pict4.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="09"><img src="../media/img/photos/casa_pict5.jpg" alt="" /></a>
-				<a href="#" class="opengallery" data-gallery-id="05"><img src="../media/img/photos/casa_pict6.jpg" alt="" /></a>
+				<a href="#" class="opengallery" data-gallery-id="IMGS5902"><img src="../media/img/photos/casa_pict1.jpg" alt="" /></a>
+				<a href="#" class="opengallery" data-gallery-id="IMGS5880"><img src="../media/img/photos/casa_pict2.jpg" alt="" /></a>
+				<a href="#" class="opengallery" data-gallery-id="IMGS5826"><img src="../media/img/photos/casa_pict3.jpg" alt="" /></a>
+				<a href="#" class="opengallery" data-gallery-id="IMGS5934"><img src="../media/img/photos/casa_pict4.jpg" alt="" /></a>
+				<a href="#" class="opengallery" data-gallery-id="IMGS5847"><img src="../media/img/photos/casa_pict5.jpg" alt="" /></a>
+				<a href="#" class="opengallery" data-gallery-id="IMGS5910"><img src="../media/img/photos/casa_pict6.jpg" alt="" /></a>
 			</aside>
 
 
@@ -109,43 +109,43 @@ Nei paraggi sorge l'Alcatraz, storico locale milanese che ospita concerti ed eve
 			</div>
 	</footer>
 
-					<figure id="gallery">
-<a   href="../media/img/photos/galleria/IMGS5826.JPG"   data-milkslide="galleria"   data-gallery-id="01"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5832.JPG"   data-milkslide="galleria"   data-gallery-id="02"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5834.JPG"   data-milkslide="galleria"   data-gallery-id="03"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5841.JPG"   data-milkslide="galleria"   data-gallery-id="04"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5847.JPG"   data-milkslide="galleria"   data-gallery-id="05"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5874.JPG"   data-milkslide="galleria"   data-gallery-id="06"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5875.JPG"   data-milkslide="galleria"   data-gallery-id="07"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5876.jpg"   data-milkslide="galleria"   data-gallery-id="08"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5877.jpg"   data-milkslide="galleria"   data-gallery-id="09"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5878.jpg"   data-milkslide="galleria"   data-gallery-id="10"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5880.JPG"   data-milkslide="galleria"   data-gallery-id="11"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5881.jpg"   data-milkslide="galleria"   data-gallery-id="12"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5883.jpg"   data-milkslide="galleria"   data-gallery-id="13"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5887.jpg"   data-milkslide="galleria"   data-gallery-id="14"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5889.JPG"   data-milkslide="galleria"   data-gallery-id="15"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5892.JPG"   data-milkslide="galleria"   data-gallery-id="16"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5893.jpg"   data-milkslide="galleria"   data-gallery-id="17"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5897.jpg"   data-milkslide="galleria"   data-gallery-id="18"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5900.jpg"   data-milkslide="galleria"   data-gallery-id="19"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5902.JPG"   data-milkslide="galleria"   data-gallery-id="20"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5903.JPG"   data-milkslide="galleria"   data-gallery-id="21"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5904.JPG"   data-milkslide="galleria"   data-gallery-id="22"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5909.JPG"   data-milkslide="galleria"   data-gallery-id="23"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5910.JPG"   data-milkslide="galleria"   data-gallery-id="24"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5911.JPG"   data-milkslide="galleria"   data-gallery-id="25"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5915.JPG"   data-milkslide="galleria"   data-gallery-id="26"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5916.jpg"   data-milkslide="galleria"   data-gallery-id="27"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5917.jpg"   data-milkslide="galleria"   data-gallery-id="28"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5918.JPG"   data-milkslide="galleria"   data-gallery-id="29"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5919.jpg"   data-milkslide="galleria"   data-gallery-id="30"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5920.jpg"   data-milkslide="galleria"   data-gallery-id="31"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5925.jpg"   data-milkslide="galleria"   data-gallery-id="32"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5934.JPG"   data-milkslide="galleria"   data-gallery-id="33"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5935.jpg"   data-milkslide="galleria"   data-gallery-id="34"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS5937.JPG"   data-milkslide="galleria"   data-gallery-id="35"   title="Il giardino interno"></a>
-<a   href="../media/img/photos/galleria/IMGS6177.JPG"   data-milkslide="galleria"   data-gallery-id="36"   title="Il giardino interno"></a>		
+<figure id="gallery">
+<a   href="../media/img/photos/galleria/IMGS5826.JPG"   data-milkslide="galleria"   data-gallery-id="IMGS5826"   title="Stanza 'Due' ????"></a>
+<a   href="../media/img/photos/galleria/IMGS5832.JPG"   data-milkslide="galleria"   data-gallery-id="02"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5834.JPG"   data-milkslide="galleria"   data-gallery-id="03"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5841.JPG"   data-milkslide="galleria"   data-gallery-id="04"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5847.JPG"   data-milkslide="galleria"   data-gallery-id="IMGS5847"   title="Tavolini nel giardino interno"></a>
+<a   href="../media/img/photos/galleria/IMGS5874.JPG"   data-milkslide="galleria"   data-gallery-id="06"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5875.JPG"   data-milkslide="galleria"   data-gallery-id="07"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5876.jpg"   data-milkslide="galleria"   data-gallery-id="08"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5877.jpg"   data-milkslide="galleria"   data-gallery-id="09"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5878.jpg"   data-milkslide="galleria"   data-gallery-id="10"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5880.JPG"   data-milkslide="galleria"   data-gallery-id="IMGS5880"   title="Stanza 'Uno' ????"></a>
+<a   href="../media/img/photos/galleria/IMGS5881.jpg"   data-milkslide="galleria"   data-gallery-id="12"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5883.jpg"   data-milkslide="galleria"   data-gallery-id="13"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5887.jpg"   data-milkslide="galleria"   data-gallery-id="14"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5889.JPG"   data-milkslide="galleria"   data-gallery-id="15"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5892.JPG"   data-milkslide="galleria"   data-gallery-id="16"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5893.jpg"   data-milkslide="galleria"   data-gallery-id="17"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5897.jpg"   data-milkslide="galleria"   data-gallery-id="18"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5900.jpg"   data-milkslide="galleria"   data-gallery-id="19"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5902.JPG"   data-milkslide="galleria"   data-gallery-id="IMGS5902"   title="Particolare in muratura"></a>
+<a   href="../media/img/photos/galleria/IMGS5903.JPG"   data-milkslide="galleria"   data-gallery-id="21"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5904.JPG"   data-milkslide="galleria"   data-gallery-id="22"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5909.JPG"   data-milkslide="galleria"   data-gallery-id="23"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5910.JPG"   data-milkslide="galleria"   data-gallery-id="IMGS5910"   title="La sala colazione"></a>
+<a   href="../media/img/photos/galleria/IMGS5911.JPG"   data-milkslide="galleria"   data-gallery-id="25"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5915.JPG"   data-milkslide="galleria"   data-gallery-id="26"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5916.jpg"   data-milkslide="galleria"   data-gallery-id="27"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5917.jpg"   data-milkslide="galleria"   data-gallery-id="28"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5918.JPG"   data-milkslide="galleria"   data-gallery-id="29"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5919.jpg"   data-milkslide="galleria"   data-gallery-id="30"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5920.jpg"   data-milkslide="galleria"   data-gallery-id="31"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5925.jpg"   data-milkslide="galleria"   data-gallery-id="32"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5934.JPG"   data-milkslide="galleria"   data-gallery-id="IMGS5934"   title="Stanza 'Due' ????"></a>
+<a   href="../media/img/photos/galleria/IMGS5935.jpg"   data-milkslide="galleria"   data-gallery-id="34"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS5937.JPG"   data-milkslide="galleria"   data-gallery-id="35"   title=""></a>
+<a   href="../media/img/photos/galleria/IMGS6177.JPG"   data-milkslide="galleria"   data-gallery-id="36"   title=""></a>		
 </figure>
 	
 
