--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -36,22 +36,27 @@
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Bed <em class="amp">&</em> Breakfast a Milano</a>
-	
+			<a id="logo" href="index.html">Bed <em class="amp">&</em>
+				Breakfast a Milano
+			</a>
+
 			<nav id="menu" class="index">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i servizi</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le
+								camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i
+								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
 
-			 <nav id="lang2">
+			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a> </li>
+					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
+					</li>
 					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
 					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
 					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
@@ -59,7 +64,7 @@
 				</ul>
 			</nav>
 		</div>
-		
+
 		<em class="backimage"></em>
 	</header>
 
@@ -70,12 +75,22 @@
 			</hgroup>
 
 			<aside>
-				<img src="../media/img/photos/metropolitana.jpg" alt="" />
+			
+				<a href="#" class="opengallery" data-gallery-id="666"><img src="../media/img/photos/metropolitana.jpg" alt="" /></a>
+		
 			</aside>
 
+			<figure id="gallery">
+				<a href="../media/img/tmp/metro-grande.gif"
+					data-milkslide="galleria" data-gallery-id="666"
+					title="Il ???? si trova a 200 dalla fermata 'Affori Centro', linea gialla"></a>
+			</figure>
+
+
 			<section>
-			
-				<p>?????? si trova a due minuti a piedi dalla fermata della Metropolitana Affori Centro (Linea Gialla)</p>
+
+				<p>?????? si trova a due minuti a piedi dalla fermata della
+					Metropolitana Affori Centro (Linea Gialla)</p>
 				<p>Potete contattarci ai seguenti indirizzi:</p>
 				<ul>
 					<li><span>Indirizzo:</span><strong><a
@@ -101,10 +116,22 @@
 	</article>
 
 	<footer>
-			<div>
-					<p class="contact"><strong>????? B&B</strong><em> - </em><span>Via Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br/><span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span></p>
-			<p class="socials"><strong>Per aggiornamenti, offerte speciali e<br/>proposte last-minute seguici su:</strong> <a href="http://www.facebook.com/pages/??" class="facebook">Facebook</a> <a href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a> <a href="http://www.tripadvisor.it/Hotel_Review???.html" class="tripadvisor">Tripadvisor</a></p>
-			</div>
+		<div>
+			<p class="contact">
+				<strong>????? B&B</strong><em> - </em><span>Via Bernardo da
+					Canal, 24 - 20161 Milano (MI) ITALIA</span><br />
+				<span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em>
+					- </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span>
+			</p>
+			<p class="socials">
+				<strong>Per aggiornamenti, offerte speciali e<br />proposte
+					last-minute seguici su:
+				</strong> <a href="http://www.facebook.com/pages/??" class="facebook">Facebook</a>
+				<a href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a>
+				<a href="http://www.tripadvisor.it/Hotel_Review???.html"
+					class="tripadvisor">Tripadvisor</a>
+			</p>
+		</div>
 	</footer>
 
 </body>
