--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -48,8 +48,10 @@
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i servizi</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le
+								camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i
+								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
@@ -81,11 +83,11 @@
 				<p>
 					<strong>Spazi a disposizione degli ospiti</strong>:
 				</p>
-				<a href="#" class="opengallery" data-gallery-id="20"><img
+				<a href="#" class="opengallery" data-gallery-id="IMGS5893"><img
 					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>sala
-						colazioni</span></a> <a href="#" class="opengallery" data-gallery-id="02"><img
+						colazioni</span></a> <a href="#" class="opengallery" data-gallery-id="IMGS5847"><img
 					src="../media/img/photos/servizi_giardino.jpg" alt="" /><span>giardino
-						interno</span></a> 
+						interno</span></a>
 			</aside>
 
 			<p>
@@ -131,157 +133,49 @@
 	</article>
 
 	<footer>
-			<div>
-					<p class="contact"><strong>????? B&B</strong><em> - </em><span>Via Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br/><span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span></p>
-			<p class="socials"><strong>Per aggiornamenti, offerte speciali e<br/>proposte last-minute seguici su:</strong> <a href="http://www.facebook.com/pages/??" class="facebook">Facebook</a> <a href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a> <a href="http://www.tripadvisor.it/Hotel_Review???.html" class="tripadvisor">Tripadvisor</a></p>
-			</div>
+		<div>
+			<p class="contact">
+				<strong>????? B&B</strong><em> - </em><span>Via Bernardo da
+					Canal, 24 - 20161 Milano (MI) ITALIA</span><br />
+				<span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em>
+					- </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span>
+			</p>
+			<p class="socials">
+				<strong>Per aggiornamenti, offerte speciali e<br />proposte
+					last-minute seguici su:
+				</strong> <a href="http://www.facebook.com/pages/??" class="facebook">Facebook</a>
+				<a href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a>
+				<a href="http://www.tripadvisor.it/Hotel_Review???.html"
+					class="tripadvisor">Tripadvisor</a>
+			</p>
+		</div>
 	</footer>
 
 	<figure id="gallery">
-		<a href="/media/img/photos/galleria/01_DSC4668.jpg"
-			data-milkslide="galleria" data-gallery-id="01"
-			title="Il giardino interno: un angolo verde, fresco e rilassante, dove durante la bella stagione viene servita la colazione."></a>
-		<a href="/media/img/photos/galleria/02_DSC4685.jpg"
-			data-milkslide="galleria" data-gallery-id="02"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/03_DSC4689.jpg"
-			data-milkslide="galleria" data-gallery-id="03"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/04_DSC4639.jpg"
-			data-milkslide="galleria" data-gallery-id="04"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/05_DSC4646.jpg"
-			data-milkslide="galleria" data-gallery-id="05"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/06_DSC4647.jpg"
-			data-milkslide="galleria" data-gallery-id="06"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/07_DSC4648.jpg"
-			data-milkslide="galleria" data-gallery-id="07"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/08_DSC4651.jpg"
-			data-milkslide="galleria" data-gallery-id="08"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/09_DSC4654.jpg"
-			data-milkslide="galleria" data-gallery-id="09"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/10_DSC4660.jpg"
-			data-milkslide="galleria" data-gallery-id="10"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/11_DSC4659.jpg"
-			data-milkslide="galleria" data-gallery-id="11"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/90_angolo3.jpg"
-			data-milkslide="galleria" data-gallery-id="90"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/91_ortensie.jpg"
-			data-milkslide="galleria" data-gallery-id="91"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/92_nicchia.jpg"
-			data-milkslide="galleria" data-gallery-id="92"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/93_muro3.jpg"
-			data-milkslide="galleria" data-gallery-id="93"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/94_albero.jpg"
-			data-milkslide="galleria" data-gallery-id="94"
-			title="Il giardino interno"></a>
-		<a href="/media/img/photos/galleria/12_DSC4944.jpg"
-			data-milkslide="galleria" data-gallery-id="12" title=""></a>
-		<a href="/media/img/photos/galleria/13_DSC4945.jpg"
-			data-milkslide="galleria" data-gallery-id="13" title=""></a>
-		<a href="/media/img/photos/galleria/14_DSC4714.jpg"
-			data-milkslide="galleria" data-gallery-id="14" title=""></a>
-		<a href="/media/img/photos/galleria/15_DSC4699.jpg"
-			data-milkslide="galleria" data-gallery-id="15" title=""></a>
-		<a href="/media/img/photos/galleria/16_DSC4706.jpg"
-			data-milkslide="galleria" data-gallery-id="16" title=""></a>
-		<a href="/media/img/photos/galleria/17_DSC4629.jpg"
-			data-milkslide="galleria" data-gallery-id="17"
-			title="La sala per la colazione: un ricco buffet, dolce e salato, con il quale iniziare la giornata"></a>
-		<a href="/media/img/photos/galleria/18_DSC4632.jpg"
-			data-milkslide="galleria" data-gallery-id="18"
-			title="La sala per la colazione"></a>
-		<a href="/media/img/photos/galleria/19_DSC4596.jpg"
-			data-milkslide="galleria" data-gallery-id="19"
-			title="La sala per la colazione"></a>
-		<a href="/media/img/photos/galleria/20_DSC4604.jpg"
-			data-milkslide="galleria" data-gallery-id="20"
-			title="La sala per la colazione"></a>
-		<a href="/media/img/photos/galleria/21_DSC4635.jpg"
-			data-milkslide="galleria" data-gallery-id="21"
-			title="La sala per la colazione"></a>
-		<a href="/media/img/photos/galleria/22_DSC4638.jpg"
-			data-milkslide="galleria" data-gallery-id="22"
-			title="La sala per la colazione"></a>
-		<a href="/media/img/photos/galleria/23_DSC4951.jpg"
-			data-milkslide="galleria" data-gallery-id="23" title=""></a>
-		<a href="/media/img/photos/galleria/24_DSC4946.jpg"
-			data-milkslide="galleria" data-gallery-id="24" title=""></a>
-		<a href="/media/img/photos/galleria/26_DSC4621.jpg"
-			data-milkslide="galleria" data-gallery-id="26" title=""></a>
-		<a href="/media/img/photos/galleria/31_DSC4616.jpg"
-			data-milkslide="galleria" data-gallery-id="31" title=""></a>
-		<a href="/media/img/photos/galleria/35_DSC4739.jpg"
-			data-milkslide="galleria" data-gallery-id="35"
-			title="Camera “David”: una camera grande ed ariosa, la più spaziosa della casa, una suite con vista sul giardino."></a>
-		<a href="/media/img/photos/galleria/34_DSC4731.jpg"
-			data-milkslide="galleria" data-gallery-id="34" title="Camera “David”"></a>
-		<a href="/media/img/photos/galleria/36_DSC4740.jpg"
-			data-milkslide="galleria" data-gallery-id="36" title="Camera “David”"></a>
-		<a href="/media/img/photos/galleria/37_DSC4742.jpg"
-			data-milkslide="galleria" data-gallery-id="37" title="Camera “David”"></a>
-		<a href="/media/img/photos/galleria/39_DSC4749.jpg"
-			data-milkslide="galleria" data-gallery-id="39" title="Camera “David”"></a>
-		<a href="/media/img/photos/galleria/33_DSC4771.jpg"
-			data-milkslide="galleria" data-gallery-id="33" title="Camera “David”"></a>
-		<a href="/media/img/photos/galleria/40_DSC4760.jpg"
-			data-milkslide="galleria" data-gallery-id="40" title="Camera “David”"></a>
-		<a href="/media/img/photos/galleria/38_DSC4746.jpg"
-			data-milkslide="galleria" data-gallery-id="38" title="Camera “David”"></a>
-		<a href="/media/img/photos/galleria/45_DSC4846.jpg"
-			data-milkslide="galleria" data-gallery-id="45"
-			title="Camera “Gaia”: una camera dall’atmosfera intima e raccolta, nella quale rilassarsi dopo una lunga giornata per le vie di Verona."></a>
-		<a href="/media/img/photos/galleria/47_DSC4896.jpg"
-			data-milkslide="galleria" data-gallery-id="47" title="Camera “Gaia”"></a>
-		<a href="/media/img/photos/galleria/48_DSC4897.jpg"
-			data-milkslide="galleria" data-gallery-id="48" title="Camera “Gaia”"></a>
-		<a href="/media/img/photos/galleria/49_DSC4898.jpg"
-			data-milkslide="galleria" data-gallery-id="49" title="Camera “Gaia”"></a>
-		<a href="/media/img/photos/galleria/50_DSC4859.jpg"
-			data-milkslide="galleria" data-gallery-id="50" title="Camera “Gaia”"></a>
-		<a href="/media/img/photos/galleria/52_DSC4869.jpg"
-			data-milkslide="galleria" data-gallery-id="52" title="Camera “Gaia”"></a>
-		<a href="/media/img/photos/galleria/46_DSC4851.jpg"
-			data-milkslide="galleria" data-gallery-id="46" title="Camera “Gaia”"></a>
-		<a href="/media/img/photos/galleria/53_DSC4932.jpg"
-			data-milkslide="galleria" data-gallery-id="53" title="Camera “Gaia”"></a>
-		<a href="/media/img/photos/galleria/60_DSC4914.jpg"
-			data-milkslide="galleria" data-gallery-id="60"
-			title="Camera “Ludovico”: una camera ampia e luminosa, con antichi mobili inglesi e una deliziosa vista sul giardino interno del B&amp;B."></a>
-		<a href="/media/img/photos/galleria/62_DSC4919.jpg"
-			data-milkslide="galleria" data-gallery-id="62"
-			title="Camera “Ludovico”"></a>
-		<a href="/media/img/photos/galleria/63_DSC4942.jpg"
-			data-milkslide="galleria" data-gallery-id="63"
-			title="Camera “Ludovico”"></a>
-		<a href="/media/img/photos/galleria/54_DSC4884.jpg"
-			data-milkslide="galleria" data-gallery-id="54"
-			title="Il salottino degli ospiti: una stanza accogliente per ospiti con caminetto e uno spazio per la lettura e l’intrattenimento"></a>
-		<a href="/media/img/photos/galleria/55_DSC4887.jpg"
-			data-milkslide="galleria" data-gallery-id="55"
-			title="Il salottino degli ospiti"></a>
-		<a href="/media/img/photos/galleria/57_DSC4895.jpg"
-			data-milkslide="galleria" data-gallery-id="57"
-			title="Il salottino degli ospiti"></a>
-		<a href="/media/img/photos/galleria/58_DSC4891.jpg"
-			data-milkslide="galleria" data-gallery-id="58"
-			title="Il salottino degli ospiti"></a>
-		<a href="/media/img/photos/galleria/56_DSC4921.jpg"
-			data-milkslide="galleria" data-gallery-id="56"
-			title="Il salottino degli ospiti"></a>
+			<a href="../media/img/photos/galleria/IMGS5893.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5893" title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5892.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5892" title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5897.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5897" title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/.jpg" data-milkslide="galleria"
+			data-gallery-id="" title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5900.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5900" title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5903.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5903" title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5904.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5904" title="La sala colazione."></a>
+		<a href="../media/img/photos/galleria/IMGS5887.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5887" title="La sala colazione."></a>
+			<a href="../media/img/photos/galleria/IMGS5910.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5910" title="La sala colazione."></a> 
+			
+		<a href="../media/img/photos/galleria/IMGS5847.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5847" title="Il giardino interno."></a> 
+		<a href="../media/img/photos/galleria/IMGS5841.jpg" data-milkslide="galleria"
+			data-gallery-id="IMGS5841" title="Il giardino interno."></a>			
 	</figure>
-
 
 </body>
 </html>
